springboot-rest/openshift/openshift.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
spec:
  ports:
    - port: 8091
      name: http
  selector:
    app: rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  labels:
    app: rest
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/kafka-tracing/rest
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
