springboot-rest/openshift/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest
spec:
  hosts:
    - "rest"
  http:
    - route:
        - destination:
            host: rest
            port:
              number: 8091
